start with structuring

--- a/modules/upgrade/pages/upgrade-overview.adoc
+++ b/modules/upgrade/pages/upgrade-overview.adoc
@@ -4,10 +4,26 @@
 {productname} has three main components, all of which will need regular updates.
 This guide covers updating your {productname} Server, Proxy, and clients.
 
-In addition to upgrading the main components of {productname}, you are also likely to need to update other underlying technologies, including the database.
-
-It is also possible to automate some upgrades.
+It is possible to automate the upgrades to some degree.
 
 This guide is not intended to be read cover to cover.
 Instead, navigate to the component you want to upgrade, then identify the versions you are upgrading from and to.
-If you are upgrading within the same major version, see xref:upgrade:migrate-4x-4x.adoc[].
+
+
+
+== Server
+
+
+* If you are updating the server within the same minor version (Maintenace Update), see xref:server-update.adoc[].
+* If you are upgrading the server within the same major version (SP Migration), see xref:upgrade:migrate-4x-4x.adoc[].
+* If you are migrating the server from a major version to the next major version, see xref:migrate-3x-4x.adoc[].
+
+In addition to upgrading the main components of {productname}, you are also likely to need to update other underlying technologies, including the database.
+
+
+
+== Proxy
+
+
+
+== Client
