--- a/modules/upgrade/pages/upgrade-overview.adoc
+++ b/modules/upgrade/pages/upgrade-overview.adoc
@@ -18,12 +18,17 @@ Instead, navigate to the component you want to upgrade, then identify the versio
 * If you are upgrading the server within the same major version (SP Migration), see xref:upgrade:migrate-4x-4x.adoc[].
 * If you are migrating the server from a major version to the next major version, see xref:migrate-3x-4x.adoc[].
 
-In addition to upgrading the main components of {productname}, you are also likely to need to update other underlying technologies, including the database.
+In addition to updating the operating of the server, you are also likely to need to update other underlying technologies, including the database.
+For more information, see xref:db-migration.adoc[].
 
 
 
 == Proxy
 
+See xref:proxy-update.adoc[] and xref:proxy-migration.adoc[].
+
 
 
 == Client
+
+See xref:client-migration.adoc[].
