--- a/modules/upgrade/pages/upgrade-overview.adoc
+++ b/modules/upgrade/pages/upgrade-overview.adoc
@@ -13,10 +13,11 @@ Instead, navigate to the component you want to upgrade, then identify the versio
 
 == Server
 
+{productname} uses a X.Y.Z versioning schema.
 
-* If you are updating the server within the same minor version (Maintenace Update), see xref:server-update.adoc[].
-* If you are upgrading the server within the same major version (SP Migration), see xref:upgrade:migrate-4x-4x.adoc[].
-* If you are migrating the server from a major version to the next major version, see xref:migrate-3x-4x.adoc[].
+* Z: If you are updating the server within the same minor version (Maintenace Update), see xref:server-update.adoc[].
+* Y: If you are upgrading the server within the same major version (SP Migration), see xref:upgrade:migrate-4x-4x.adoc[].
+* X: If you are migrating the server from a major version to the next major version, see xref:migrate-3x-4x.adoc[].
 
 In addition to updating the operating of the server, you are also likely to need to update other underlying technologies, including the database.
 For more information, see xref:db-migration.adoc[].
