--- a/modules/upgrade/pages/server-update.adoc
+++ b/modules/upgrade/pages/server-update.adoc
@@ -1,8 +1,11 @@
 [[update.suse.manager]]
 = {productname} Server Update
 
-Before you perform any update, it is important to ensure you have the latest versions of all installed packages.
-Then you will upgrade the database schema.
+This update procedure covers simple package update or a concerted micro update, which is also known as a maintenance update (MU).
+During a MU the user stops services, updates packages, runs the script to update the database, and restarts services. Example: 4.0.1 -> 4.0.2.
+
+This means first you ensure that you have the latest versions of all installed packages installed.
+Then you can upgrade the database schema.
 
 .Procedure: Updating the {productname} Server
 
