--- a/README.adoc
+++ b/README.adoc
@@ -44,7 +44,7 @@ endif::[]
 :sourcedir: .
 :imagesdir: images
 
-image:https://travis-ci.org/SUSE/doc-susemanager.svg?branch=master["Build Status", link="https://travis-ci.org/SUSE/doc-susemanager"]
+<a href="https://github.com/SUSE/doc-susemanager"><img alt="GitHub Actions status" src="https://github.com/SUSE/doc-susemanager/workflows/build%20test%20deploy/badge.svg"></a>
 
 [suma.doc.intro]
 == Introduction
