--- a/README.adoc
+++ b/README.adoc
@@ -44,7 +44,7 @@ endif::[]
 :sourcedir: .
 :imagesdir: images
 
-<a href="https://github.com/SUSE/doc-susemanager"><img alt="GitHub Actions status" src="https://github.com/SUSE/doc-susemanager/workflows/build%20test%20deploy/badge.svg"></a>
+image:https://github.com/SUSE/doc-susemanager/workflows/build%20test%20deploy/badge.svg?branch=master["Build Status", link="https://github.com/SUSE/doc-susemanager"]
 
 [suma.doc.intro]
 == Introduction
