--- a/modules/architecture/pages/salt-contact-method-overview.adoc
+++ b/modules/architecture/pages/salt-contact-method-overview.adoc
@@ -2,10 +2,6 @@
 = Salt Contact Methods
 
 
-
-
-
-
 == Choosing a Contact Method for Salt
 
 {productname} provides several methods for communication between client and server.
@@ -14,6 +10,6 @@ All commands that the {productname} server sends to its clients will be routed t
 The contact method you select for Salt will depend on your network infrastructure.
 The following sections provide a starting point for selecting a method which best suits your network environment.
 
-* xref:salt/salt-pull.adoc[Salt Pull]
-* xref:salt/salt-ssh-push.adoc[Salt SSH Push]
-* xref:salt/salt-ssh-push-tunnel.adoc[Salt SSH Push and Tunnel]
+* xref:salt-pull.adoc[Salt Pull]
+* xref:salt-ssh-push.adoc[Salt SSH Push]
+* xref:salt-ssh-push-tunnel.adoc[Salt SSH Push and Tunnel]
