--- a/modules/client-configuration/pages/clients-and-activation-keys.adoc
+++ b/modules/client-configuration/pages/clients-and-activation-keys.adoc
@@ -117,7 +117,7 @@ sles12-sp2-test_packages-blg_502-room_21-ppc64le
 ====
 Do not use commas in the [guimenu]``Key`` field for any {suse} products.
 However, you *must* use commas for Red Hat Products.
-For more information, see xref:reference:system-details/activation-keys.adoc[].
+For more information, see xref:reference:systems/activation-keys.adoc[].
 ====
 
 .Included Channels
