--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -30,7 +30,7 @@ We also recommend that you include your GPG key for additional security.
 For more on creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
 
 When your bootstrap script is ready, execute it on the host to register it with the {productname} Server.
-For more on client registration, see xref:client-configuration:manual-registration-overview.adoc[].
+For more on client registration, see xref:client-configuration:registration-overview.adoc[].
 
 For Salt clients, you will need to enable the [systemitem]``Virtualization Host`` entitlement.
 This allows you to see VM changes instantly.
