--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -141,7 +141,7 @@ If you are using {ay} to install {slsa}, you will also need to include this snip
 
 For more on {ay}, see xref:client-configuration:autoyast.adoc[].
 
-For more on {kickstart}, see xref:client-configurastion:kickstart.adoc[], or refer to the Red Hat documentation for your installation.
+For more on {kickstart}, see xref:client-configuration:kickstart.adoc[], or refer to the Red Hat documentation for your installation.
 
 
 .Procedure: Uploading an Autoinstallation Profile
