--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -175,4 +175,4 @@ tail -f /var/log/rhn/reposync/<CHANNEL_NAME>.log
 ----
 
 When the channel synchronization process is complete, you can continue with client registration.
-For more instructions, see xref:client-configuration:manual-registration-overview.adoc[].
+For more instructions, see xref:client-configuration:registration-overview.adoc[].
