--- a/modules/client-configuration/pages/clients-and-activation-keys.adoc
+++ b/modules/client-configuration/pages/clients-and-activation-keys.adoc
@@ -33,7 +33,7 @@ For example, ``SLES12-SP4`` for {sls}{nbsp}12{nbsp}SP4.
 ====
 Do not use commas in the [guimenu]``Key`` field for any {suse} products.
 However, you *must* use commas for Red Hat Products.
-For more information, see xref:reference:system-details/activation-keys.adoc[].
+For more information, see xref:reference:systems/activation-keys.adoc[].
 ====
 +
 . In the [guimenu]``Base Channels`` drop-down box, select the appropriate base software channel, and allow the relevant child channels to populate.
