--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -110,6 +110,10 @@ Your custom channels should use this structure:
 
 When you have the channels set up, associate each channel with the appropriate repository, and synchronize then channels.
 
+[IMPORTANT]
+====
+You need all the new channels fully syncronized before bootstraping any Ubuntu client.
+====
 endif::[]
 
 
@@ -135,16 +139,17 @@ ubuntu-1804-amd64-universe-uyuni ubuntu-1804-amd64-uyuni-client
 ----
 . Synchronize the new custom channels.
 
+[IMPORTANT]
+====
+You need all the new channels fully syncronized, including Universe (Universe contains important dependencies for salt), before bootstraping any Ubuntu client.
+====
 endif::[]
-
-
 
 [NOTE]
 ====
 {ubuntu} channels can be very large.
 Synchronization can sometimes take several hours.
 ====
-
 
 There are two ways to check if a channel has finished synchronizing:
 
