fixed more xrefs

--- a/modules/reference/pages/patches/applying-patches.adoc
+++ b/modules/reference/pages/patches/applying-patches.adoc
@@ -20,7 +20,7 @@ In addition, users with appropriate roles can apply patches using two other meth
 [IMPORTANT]
 ====
 If you use scheduled package installation, the packages or patches are installed via the configured contact method.
-For more information, see xref:client-configuration:contact-methods.adoc[].
+For more information, see xref:client-configuration:contact-methods-intro.adoc[].
 ====
 
 
