--- a/modules/reference/pages/systems/activation-keys.adoc
+++ b/modules/reference/pages/systems/activation-keys.adoc
@@ -9,7 +9,7 @@ With such an activation key, register a {sle} or Red Hat Enterprise Linux system
 System-specific activation keys created through the [guimenu]``Reactivation`` subtab of the [guimenu]``System Details`` page are not part of this list because they are not reusable across systems.
 ====
 
-For more information about activation keys, see xref:client-configuration:creating-activation-keys.adoc[] and xref:client-configuration:client-and-activation-keys.adoc[].
+For more information about activation keys, see xref:client-configuration:clients-and-activation-keys.adoc[].
 
 
 
@@ -57,7 +57,7 @@ Select the child channels you need (for example, the Tools child channel).
 . [guimenu]``Contact Method`` - Select how clients communicate with {productname}. [guimenu]``Default`` (Pull) waits for the client to check in. With [guimenu]``Push via SSH`` and [guimenu]``Push via SSH tunnel`` the server contacts the client via SSH (with or without tunnel) and pushes updates and actions, etc.
 +
 For more information about contact methods, see
-xref:client-configuration:contact-methods.adoc[].
+xref:client-configuration:contact-methods-intro.adoc[].
 
 
 . [guimenu]``Universal Default`` -- Select whether this key should be considered the primary activation key for your organization.
