--- a/modules/reference/pages/systems/autoinst-profile-details.adoc
+++ b/modules/reference/pages/systems/autoinst-profile-details.adoc
@@ -278,7 +278,7 @@ Click the [guimenu]``Upload Kickstart/Autoyast File`` link from the menu:Systems
 
 . In the first line, enter a profile [guimenu]``Label`` for the automated installation. This label[] drop-down menu is only populated if one or more distributions have been created for the selected base channel (see xref:reference:systems/autoinst-distributions.adoc[]).
 . Instead of selecting a specific tree, you can also check the box [guimenu]``Always use the newest Tree`` for this base channel. This setting lets {productname} automatically pick the latest tree that is associated with the specified base channels. If you add new trees later, {productname} will always keep the most recently created or modified.
-. Select the [guimenu]``Virtualization Type`` from the drop-down menu. For more information about virtualization with **traditional clients**, see xref:administration:virtualization.adoc[].
+. Select the [guimenu]``Virtualization Type`` from the drop-down menu. For more information about virtualization with **traditional clients**, see xref:client-configuration:virtualization.adoc[].
 
 +
 NOTE: If you do not intend to use the autoinstall profile to create virtual guest systems, you can leave the drop-down set to the default choice [guimenu]``KVM Virtualized Guest``.
