--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -12,6 +12,21 @@ You cannot migrate directly from PostgreSQL{nbsp}9.4 to version 10.
 
 
 
+////
+== Background Information
+
+
+* {productname} 3.1.4, SLES 12 SP3, Postgres 9.6
+* {productname} 3.1.11, SLES 12 SP3, Postgres 9.6
+* {productname} 3.2.10, SLES 12 SP3, Postgres 9.6
+* {productname} 3.2.10, SLES 12 SP3, Postgres 10
+* {productname} 3.2.10, SLES 12 SP4, Postgres 10
+* {productname} 4.0.1, SLES 15 SP1, Postgres 10
+
+////
+
+
+
 
 [[db-migration-prepare]]
 == Prepare to Upgrade
