--- a/modules/upgrade/pages/server-update.adoc
+++ b/modules/upgrade/pages/server-update.adoc
@@ -1,13 +1,14 @@
 [[update.suse.manager]]
 = {productname} Server Update
 
-This update procedure covers simple package update or a concerted micro update, which is also known as a maintenance update (MU).
-During a MU the user stops services, updates packages, runs the script to update the database, and restarts services. Example: 4.0.1 -> 4.0.2.
+This update procedure covers simple package updates or a concerted micro update, which is also known as a maintenance update (MU).
+During a MU the user stops services, updates packages, runs the script to update the database, and restarts services.
+Example: [literal]``4.0.1`` → [literal]``4.0.2``.
 
-This means first you ensure that you have the latest versions of all installed packages installed.
+This means first you ensure that you have the latest version of all installed packages installed.
 Then you can upgrade the database schema.
 
-.Procedure: Updating the {productname} Server
+.Procedure: Updating Packages on the {productname} Server
 
 . On the {productname} Server, at the command prompt, as root, stop the spacewalk services:
 +
@@ -26,9 +27,9 @@ zypper patch
 ----
 
 
-.Procedure: Updating the Database Schema
+.Procedure: Upgrading the Database Schema
 
-If a patch includes a new database schema update, you will need to use the [command]``spacewalk-schema-upgrade`` command.
+If a patch includes a new database schema upgrade, you will need to use the [command]``spacewalk-schema-upgrade`` command.
 
 . On the {productname} Server, at the command prompt, as root, ensure the database service is running:
 +
