fixed more xrefs

--- a/modules/reference/pages/systems/system-details/sd-formulas.adoc
+++ b/modules/reference/pages/systems/system-details/sd-formulas.adoc
@@ -11,4 +11,4 @@ Select from the listing by clicking the check box to the left.
 Then confirm with the btn:[Save] button on the right.
 When done, additional subtabs appear where you can configure the formulas.
 
-For more information about formulas, see xref:salt:salt-formulas.adoc[].
+For more information about formulas, see xref:salt:formulas-intro.adoc[].
