--- a/modules/reference/pages/systems/systems-list.adoc
+++ b/modules/reference/pages/systems/systems-list.adoc
@@ -25,6 +25,7 @@ image::systems_physical_systems.png[scaledwidth=80%]
 
 
 
+
 [[ref.webui.systems.systems.virtual]]
 == Virtual Systems
 
@@ -130,7 +131,7 @@ The reason may be one of the following:
 * The system is not entitled to any {productname} service.
 System profiles that remain unentitled for 180 days (6 months) are removed.
 * The system is entitled, but [systemitem]``rhnsd`` has been disabled on the traditional client.
-For more on restarting and troubleshooting, see xref:client-configuration:contact-methods.adoc[].
+For more on restarting and troubleshooting, see xref:client-configuration:contact-methods-intro.adoc[].
 * The system is behind a firewall that does not allow connections over [systemitem]``https`` (port 443).
 * The system is behind an HTTP proxy server that has not been properly configured.
 * The system is connected to a {productname} Proxy Server or {productname} that has not been properly configured.
