--- a/modules/reference/pages/systems/virtual-host-managers.adoc
+++ b/modules/reference/pages/systems/virtual-host-managers.adoc
@@ -33,4 +33,4 @@ You can also begin data collection manually through the {webui}, by navigating t
 This tool is automatically invoked nightly by Taskomatic.
 Log files for the [command]``virtual-host-gatherer`` tool are located at [path]``/var/log/rhn/gather.log``.
 
-For more information on VHMs, see xref:administration:virtual-hosts.adoc[].
+For more information on VHMs, see xref:client-configuration:virtualization.adoc[].
