--- a/modules/salt/pages/formulas-intro.adoc
+++ b/modules/salt/pages/formulas-intro.adoc
@@ -19,4 +19,4 @@ The most commonly used formulas are documented in this section.
 
 Alternatively, you can use pre-written formulas as a starting point for your own custom formulas.
 Pre-written formulas are available from https://github.com/saltstack-formulas.
-For more information on custom formulas, see xref:salt:salt-formulas-custom.adoc[].
+For more information on custom formulas, see xref:salt:formulas-custom.adoc[].
