--- a/modules/salt/pages/large-scale.adoc
+++ b/modules/salt/pages/large-scale.adoc
@@ -173,4 +173,4 @@ Swap space use can have significant impacts on performance.
 If significant non-transient swap usage is detected, you can increase the available hardware RAM.
 
 You can also consider tuning the Server to consume less memory.
-For more information on tuning, see xref:salt:large-scale_tuning.adoc[].
+For more information on tuning, see xref:salt:large-scale-tuning.adoc[].
