--- a/modules/upgrade/pages/proxy-update.adoc
+++ b/modules/upgrade/pages/proxy-update.adoc
@@ -21,7 +21,7 @@ MU updates require a restart of the proxy service.
 
 Before you perform any proxy update, schedule a maintenance window.
 The clients registered to {productname} through the proxy will not be able to connect to {productname} while the update is in progress.
-For more information about maintenance windows, see xref:administration/maintenance-window.adoc[].
+For more information about maintenance windows, see xref:administration:maintenance-window.adoc[].
 
 
 
