fixed remaining xrefs

--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -45,7 +45,7 @@ The branch server can operate in several different network configurations:
   In this configuration, the branch server is not required to manage a network (DHCP and DNS services), but acts as a PXE boot server and provides FTP and TFTP services.
 
 {smr} Branch servers are implemented as enhanced {susemgr} Proxy servers.
-For technical background information on {smr} Branch servers, see also the documentation on {susemgr} Proxy servers (xref:installation/install-proxy-unified.adoc[]).
+For technical background information on {smr} Branch servers, see also the documentation on {susemgr} Proxy servers (xref:installation:install-proxy-unified.adoc[]).
 
 
 
@@ -68,7 +68,7 @@ The minimum memory requirement is 1 GB for hosts that need to run OS images bui
 For more information, see the documentation of the underlying system (in this case: {sls}{nbsp}12).
 . Disk space depending on the image size.
 
-For more information on {smr} PoS terminals, see documentation on {susemgr} Salt clients (xref:client-configuration/client-config-overview.adoc[]).
+For more information on {smr} PoS terminals, see documentation on {susemgr} Salt clients (xref:client-configuration:client-config-overview.adoc[]).
 
 {smr} supports PoS terminals that boot using both BIOS and UEFI.
 For UEFI booting terminals, you will need to configure the EFI partition in the Saltboot formula.
@@ -104,7 +104,7 @@ You can use formulas to apply configuration patterns to your hardware groups.
 
 You can use default settings for formulas, or edit them to make them more specific to your environment.
 
-For more information about formulas, see xref:retail:retail-formulas.adoc[].
+For more information about formulas, see xref:retail:retail-formulas-intro.adoc[].
 
 
 
