--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -65,7 +65,7 @@ Each hardware type group must have the Saltboot formula applied.
 . Open the details page for your new hardware type group, and navigate to the [guimenu]``Formulas`` tab.
 . Select the Saltboot formula and click btn:[Save].
 . Navigate to the menu:Formulas[Saltboot] tab.
-. Configure the Saltboot formula according to the instructions in xref:retail:retail-formulas.adoc[].
+. Configure the Saltboot formula according to the instructions in xref:retail:retail-formulas-intro.adoc[].
 
 
 
