--- a/modules/retail/pages/retail-install-packages.adoc
+++ b/modules/retail/pages/retail-install-packages.adoc
@@ -85,4 +85,4 @@ salt '*' saltutil.sync_all
 systemctl restart salt-master
 ----
 
-For more information about formulas, see xref:retail:retail-formulas.adoc[].
+For more information about formulas, see xref:retail:retail-formulas-intro.adoc[].
