--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -26,7 +26,7 @@ If you intend to use your installation with {smr} formulas, do not configure Cob
 == Install the Build Host and Register It to {susemgr}
 
 Your build host must be a Salt client, running {sls}{nbsp}12 SP3 or SP4 for building {sls} 12 images (SP4 recommended).
-For instructions to install Salt clients, see xref:client-configuration:manual-registration-overview.adoc[].
+For instructions to install Salt clients, see xref:client-configuration:registration-overview.adoc[].
 
 [WARNING]
 ====
@@ -115,7 +115,7 @@ Before you configure the branch server, ensure you have decided on networking to
 
 The branch server can be configured automatically using the [command]``retail_branch_init`` command, as shown in this section.
 If you prefer to manually configure the branch server, you can do so using formulas.
-For more information about formulas, see xref:retail:retail-formulas.adoc[].
+For more information about formulas, see xref:retail:retail-formulas-intro.adoc[].
 
 .Procedure: Configuring Branch Server Formulas With a Helper Script
 
