--- a/modules/retail/pages/retail-formulas-intro.adoc
+++ b/modules/retail/pages/retail-formulas-intro.adoc
@@ -9,7 +9,7 @@ For the most commonly used formulas, see xref:salt:formulas-intro.adoc[].
 
 Alternatively, you can use pre-written formulas as a starting point for your own custom formulas.
 Pre-written formulas are available from https://github.com/saltstack-formulas.
-For more information on custom formulas, see xref:salt:salt-formulas-custom.adoc[].
+For more information on custom formulas, see xref:salt:formulas-custom.adoc[].
 
 All formulas must be accurately configured for your {smr} installation to function correctly.
 If you are unsure of the correct formula configuration details, run the [command]``retail_branch_init`` command before you begin to create the recommended formula configuration.
