--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -20,7 +20,7 @@ This section contains a checklist for your maintenance window, with links to fur
 // . Check if the configuration is still correct.
 . Apply the latest updates.
 See xref:upgrade:server-update.adoc[].
-. Update to the latest service pack, if required.
+. Upgrade to the latest service pack, if required.
 See xref:upgrade:migrate-4x-4x.adoc[].
 // We reboot during the above listed procedures.
 // . Reboot the server.
@@ -37,7 +37,8 @@ For information on using zypper, see https://www.suse.com/documentation/sles-15/
 ////
 Preferable, you will run such a tool within a maintenance window; for more information, see xref:administration:maintenance-window.adoc#maintenance-window[].
 
- complete procedure, also see above:
+complete procedure, also see above:
+
 1. Log in as root user to the SUSE Manager server.
 2. Stop the Spacewalk service:
    spacewalk-service stop
