--- a/modules/upgrade/pages/server-update.adoc
+++ b/modules/upgrade/pages/server-update.adoc
@@ -10,6 +10,9 @@ Then you can upgrade the database schema.
 
 .Procedure: Updating Packages on the {productname} Server
 
+By default, several update channels are configured and enabled for the {productname} Server.
+New and updated packages will become available automatically.
+
 . On the {productname} Server, at the command prompt, as root, stop the spacewalk services:
 +
 ----
