--- a/modules/administration/pages/tshoot-taskomatic.adoc
+++ b/modules/administration/pages/tshoot-taskomatic.adoc
@@ -18,7 +18,8 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 . Last step
 ////
 
-If Taskomatic crashes or has failed to terminate a process, repository metadata regeneration can be prevented from happening regularly.
+If Taskomatic crashes, repository metadata regeneration can be prevented from happening regularly. 
+Repository metadata regeneration is a relatively intensive process, so Taskomatic can normally take several minutes to complete it.
 When this occurs, package updates will be available in the {webui}, but will not appear on the client, and attempts to update the client will fail.
 To correct this, determine if any processes are running, or if a crash could have occurred.
 When you have located the problematic process, the metadata can be regenerated and synchronization occurs as expected.
