--- a/modules/administration/pages/tshoot-taskomatic.adoc
+++ b/modules/administration/pages/tshoot-taskomatic.adoc
@@ -22,7 +22,7 @@ If Taskomatic crashes, repository metadata regeneration can be prevented from ha
 Repository metadata regeneration is a relatively intensive process, so Taskomatic can normally take several minutes to complete it.
 When this occurs, package updates will be available in the {webui}, but will not appear on the client, and attempts to update the client will fail.
 To correct this, determine if Taskomatic is still in the process of generating repository metadata, or if a crash could have occurred.
-When you have located the problematic process, the metadata can be regenerated and synchronization occurs as expected.
+Wait for metadata regeneration to complete or restart Taskomatic after a crash in order for client updates to be carried out correctly.
 
 .Procedure: Resolving Taskomatic Problems
 
