--- a/modules/administration/pages/tshoot-taskomatic.adoc
+++ b/modules/administration/pages/tshoot-taskomatic.adoc
@@ -26,7 +26,7 @@ Wait for metadata regeneration to complete or restart Taskomatic after a crash i
 
 .Procedure: Resolving Taskomatic Problems
 
-. On the server, check the [path]``/var/log/rhn/rhn_taskomatic_daemon.log`` file to determine if any processes are still running or a crash occurred.
+. On the server, check the [path]``/var/log/rhn/rhn_taskomatic_daemon.log`` file to determine if any metadata regeneration processes are still running or a crash occurred.
 . Restart taskomatic:
 +
 ----
