--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -33,7 +33,7 @@ This table lists the available reports:
 | Activation Keys | [command]``activation-keys`` | All activation keys, and the entitlements, channels, configuration channels, server groups, and packages associated with them.
 | Activation Keys: Channels | [command]``activation-keys-channels`` | All activation keys and the entities associated with each key.
 | Activation Keys: Configuration | [command]``activation-keys-config`` | All activation keys and the configuration channels associated with each key.
-| Activation Keys: Server Groups | [command]``activation-keys-groups`` | All activation keys and the server groups associated with each key.
+| Activation Keys: Server Groups | [command]``activation-keys-groups`` | All activation keys and the system groups associated with each key.
 | Activation Keys: Packages | [command]``activation-keys-packages`` | All activation keys and the packages each key can deploy.
 | Channel Packages | [command]``channel-packages`` | All packages in a channel.
 | Channel Report | [command]``channels`` | Detailed report of a given channel.
