--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -41,7 +41,7 @@ This table lists the available reports:
 | Configuration Files | [command]``config-files`` | All configuration file revisions for all organizations, including  file contents and file information.
 | Latest Configuration Files | [command]``config-files-latest`` | The most recent configuration file revisions for all organizations, including  file contents and file information.
 | Custom Channels | [command]``custom-channels`` | Channel metadata for all channels owned by specific organizations
-| Custom Info | [command]``custom-info`` | System custom information.
+| Custom Info | [command]``custom-info`` | Client custom information.
 | Patches in Channels | [command]``errata-channels`` | All patches in channels.
 | Patches Details | [command]``errata-list`` | All patches that affect registered systems.
 | All patches | [command]``errata-list-all`` | All patches.
