--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -43,7 +43,7 @@ This table lists the available reports:
 | Custom Channels | [command]``custom-channels`` | Channel metadata for all channels owned by specific organizations
 | Custom Info | [command]``custom-info`` | Client custom information.
 | Patches in Channels | [command]``errata-channels`` | All patches in channels.
-| Patches Details | [command]``errata-list`` | All patches that affect registered systems.
+| Patches Details | [command]``errata-list`` | All patches that affect registered clients.
 | All patches | [command]``errata-list-all`` | All patches.
 | Patches for Systems | [command]``errata-systems`` | Applicable patches and any registered systems that are affected.
 | Host Guests | [command]``host-guests`` | Host and guests mapping.
