--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -47,7 +47,7 @@ This table lists the available reports:
 | All patches | [command]``errata-list-all`` | All patches.
 | Patches for Systems | [command]``errata-systems`` | Applicable patches and any registered systems that are affected.
 | Host Guests | [command]``host-guests`` | Host and guests mapping.
-| Inactive Systems | [command]``inactive-systems`` | Inactive systems.
+| Inactive Clients | [command]``inactive-systems`` | Inactive clients.
 | System Inventory | [command]``inventory`` | Systems registered to the server, together with hardware and software information.
 | Kickstart Scripts | [command]``kickstart-scripts`` | All kickstart scripts, with details.
 | Kickstart Trees | [command]``kickstartable-trees`` | Kickstartable trees.
