--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -53,7 +53,7 @@ This table lists the available reports:
 | Kickstart Trees | [command]``kickstartable-trees`` | Kickstartable trees.
 | All Upgradable Versions | [command]``packages-updates-all`` | All newer package versions that can be upgraded.
 | Newest Upgradable Version | [command]``packages-updates-newest`` | Newest package versions that can be upgraded.
-| Proxy Overview | [command]``proxies-overview`` | All proxies and the servers registered with each.
+| Proxy Overview | [command]``proxies-overview`` | All proxies and the clients registered to each.
 | Repositories | [command]``repositories`` | All repositories, with their associated SSL details, and any filters.
 | Result of SCAP | [command]``scap-scan`` | Result of OpenSCAP ``sccdf`` evaluations.
 | Result of SCAP | [command]``scap-scan-results`` | Result of OpenSCAP ``sccdf`` evaluations, in a different format.
