--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -45,7 +45,7 @@ This table lists the available reports:
 | Patches in Channels | [command]``errata-channels`` | All patches in channels.
 | Patches Details | [command]``errata-list`` | All patches that affect registered clients.
 | All patches | [command]``errata-list-all`` | All patches.
-| Patches for Systems | [command]``errata-systems`` | Applicable patches and any registered systems that are affected.
+| Patches for Clients | [command]``errata-systems`` | Applicable patches and any registered clients that are affected.
 | Host Guests | [command]``host-guests`` | Host and guests mapping.
 | Inactive Clients | [command]``inactive-systems`` | Inactive clients.
 | System Inventory | [command]``inventory`` | Systems registered to the server, together with hardware and software information.
