--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -57,7 +57,7 @@ This table lists the available reports:
 | Repositories | [command]``repositories`` | All repositories, with their associated SSL details, and any filters.
 | Result of SCAP | [command]``scap-scan`` | Result of OpenSCAP ``sccdf`` evaluations.
 | Result of SCAP | [command]``scap-scan-results`` | Result of OpenSCAP ``sccdf`` evaluations, in a different format.
-| System Data | [command]``splice-export`` | System data needed for splice integration.
+| System Data | [command]``splice-export`` | Client data needed for splice integration.
 | System Crash: Count | [command]``system-crash-count`` | The total number of system crashes.
 | System Crash: Details | [command]``system-crash-details`` | Crash details for all systems.
 | System Currency | [command]``system-currency`` | Number of available errata for each registered system.
