--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -60,7 +60,7 @@ This table lists the available reports:
 | System Data | [command]``splice-export`` | Client data needed for splice integration.
 | System Crash: Count | [command]``system-crash-count`` | The total number of system crashes.
 | System Crash: Details | [command]``system-crash-details`` | Crash details for all systems.
-| System Currency | [command]``system-currency`` | Number of available errata for each registered system.
+| System Currency | [command]``system-currency`` | Number of available patches for each registered client.
 | System Extra Packages | [command]``system-extra-packages`` | All packages installed on all systems that are not available from channels the system is subscribed to.
 | System Groups | [command]``system-groups`` | System groups.
 | Activation Keys for System Groups | [command]``system-groups-keys`` | Activation keys for system groups.
