--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -61,7 +61,7 @@ This table lists the available reports:
 | System Crash: Count | [command]``system-crash-count`` | The total number of system crashes.
 | System Crash: Details | [command]``system-crash-details`` | Crash details for all systems.
 | System Currency | [command]``system-currency`` | Number of available patches for each registered client.
-| System Extra Packages | [command]``system-extra-packages`` | All packages installed on all systems that are not available from channels the system is subscribed to.
+| System Extra Packages | [command]``system-extra-packages`` | All packages installed on all clients that are not available from channels the client is subscribed to.
 | System Groups | [command]``system-groups`` | System groups.
 | Activation Keys for System Groups | [command]``system-groups-keys`` | Activation keys for system groups.
 | Systems in System Groups | [command]``system-groups-systems`` | Systems in system groups.
