--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -101,7 +101,7 @@ The output should look like this:
 
 ----
 (0750) drwxr-x--- 1 postgres postgres /var/lib/pgsql
-(0775) drwxrwxr-x 1 wwwrun   www      /var/spacewalk/
+drwxrwxr-x 1 wwwrun   www      /var/spacewalk/
 ----
 
 If required, change the permissions with these commands:
