--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -14,7 +14,7 @@ You will also require:
 * At least one {k8s} or {caasp} cluster available on your network.
 * The [systemitem]``virtual-host-gatherer-Kubernetes`` package installed on the {productname} Server.
 * {k8s} version 1.5.0 or higher, or {caasp}.
-* Docker version 1.12 or higher on the container build host
+* Docker version 1.12 or higher on the container build host.
 
 
 
