--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -60,7 +60,7 @@ The image list table contains three columns:
 
 * [guimenu]``Revision``:
 +
-An artificial sequence number that increments on every rebuild for images built by {productanme}, or on every import for externally built images.
+A sequence number that increments on every rebuild for images built by {productanme}, or on every import for externally built images.
 * [guimenu]``Runtime``:
 +
 Overall status of the running instances for each image in registered clusters.
