--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -81,7 +81,7 @@ You might need to redeploy the image into the pod.
 * ``No information``:
 +
 The checksum of the instance image does not match the image data contained in {productname}.
-You might need to redeploy the image into the pod.
+You might need to redeploy the image.
 
 
 
