--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -77,7 +77,7 @@ All the running instances are running the same build of the image as tracked by 
 * ``Outdated instances found``:
 +
 Some of the instances are running an older build of the image.
-You might need to redeploy the image into the pod.
+You might need to redeploy the image.
 * ``No information``:
 +
 The checksum of the instance image does not match the image data contained in {productname}.
