--- a/modules/administration/pages/kubernetes.adoc
+++ b/modules/administration/pages/kubernetes.adoc
@@ -112,7 +112,7 @@ The updated data should now be available in the image list at menu:Images[Image 
 
 .Procedure: Rebuilding a Previously Deployed Image
 
-. In the {productname} {webui}, navigate to menu:Images[Image List], locate the row that contains the instance you want to rebuild, and click btn:[Details].
+. In the {productname} {webui}, navigate to menu:Images[Image List], locate the row that contains the image you want to rebuild, and click btn:[Details].
 . Navigate to the [guimenu]``Build Status`` section, and click btn:[Rebuild].
 
 The runtime status of the image should now be updated in the image list at menu:Images[Image List].
