remove {productname} (per feedback)

--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -1,5 +1,5 @@
 [[maintenance-window]]
-= {productname} Maintenance Window
+= Maintenance Window
 
 If you work with scheduled maintenance windows, you might find it difficult to remember all the things that you need to do before, during, and after that critical downtime of the {productname} Server.
 {productname} Server related systems such as Inter-Server Synchronization Slave Servers or {productname} Proxies are also affected and have to be considered.
@@ -10,7 +10,7 @@ You must keep the {productname} Server up-to-date or you will risk not being abl
 
 
 
-== {productname} Server
+== Server
 
 This section contains a checklist for your maintenance window, with links to further information on performing each of the steps.
 
@@ -115,7 +115,7 @@ the update of the main server (master server) is completed.
 
 
 
-== {productname} Proxy
+== Proxy
 
 Proxies should be updated as soon as Server updates are complete.
 In general, running a Proxy connected to a Server on a different version is not supported. The only exception is for the duration of updates where it is expected that the Server is updated first, so the Proxy could run the previous version temporarily.
