--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -4,7 +4,8 @@
 If you work with scheduled maintenance windows, you might find it difficult to remember all the things that you need to do before, during, and after that critical downtime of the {productname} Server.
 {productname} Server related systems such as Inter-Server Synchronization Slave Servers or {productname} Proxies are also affected and have to be considered.
 
-{suse} recommends to keep the {productname} infrastructure (Servers, Proxies, build hosts, etc.) always up-to-date.
+{suse} recommends you always keep your {productname} infrastructure updated.
+That includes servers, proxies, and build hosts.
 // It's similar to zypper at the package level:
 You must keep the {productname} Server up-to-date or you will risk not being able to update some parts of your IT landscape successfully!
 
