--- a/modules/administration/pages/maintenance-window.adoc
+++ b/modules/administration/pages/maintenance-window.adoc
@@ -7,7 +7,7 @@ If you work with scheduled maintenance windows, you might find it difficult to r
 {suse} recommends you always keep your {productname} infrastructure updated.
 That includes servers, proxies, and build hosts.
 // It's similar to zypper at the package level:
-You must keep the {productname} Server up-to-date or you will risk not being able to update some parts of your IT landscape successfully!
+If you do not keep the {productname} Server updated, you might not be able to update some parts of your environment when you need to.
 
 
 
