--- a/modules/upgrade/pages/migrate-4x-4x.adoc
+++ b/modules/upgrade/pages/migrate-4x-4x.adoc
@@ -1,7 +1,7 @@
 [[bp.sp.migration.version]]
 = Upgrading from Version 4 to 4.x
 
-Upgrading {productname} from version 4 to 4.x (when available) can be done using either with the {yast} Online Migration tool or the Zypper command line tool.
+You can upgrade {productname} from version 4 to 4.x (when available) using either the {yast} online migration tool or the Zypper command line tool.
 This procedure is also known as SP migration (service pack migration).
 During this procedure you do not replace the server; instead it is an in-place upgrade.
 Example: [literal]``4.0.x`` → [literal]``4.1.0``.
