--- a/modules/upgrade/pages/migrate-4x-4x.adoc
+++ b/modules/upgrade/pages/migrate-4x-4x.adoc
@@ -3,7 +3,8 @@
 
 You can upgrade {productname} from version 4 to 4.x (when available) using either the {yast} online migration tool or the Zypper command line tool.
 This procedure is also known as SP migration (service pack migration).
-During this procedure you do not replace the server; instead it is an in-place upgrade.
+This procedure does not replace the server with an updated copy.
+It is an in-place upgrade.
 Example: [literal]``4.0.x`` → [literal]``4.1.0``.
 
 // So on my desktop, YaST calls it "online upgrades". We should check this terminology. LKB 2019-08-21
