avoid double heading

--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -116,13 +116,15 @@ You will also need to restart the target system before it can be used.
 [[migration.troubleshooting]]
 == Troubleshooting
 
+A complete migration can consume a lot of time.
+This is caused by the amount of data that must be copied.
+Here are some hints how you can compensate it.
+
 
 
 [[migration.troubleshooting.systemdata]]
-==== Copy System Data to the Target System
+=== Copy System Data to the Target System
 
-A complete migration can consume a lot of time.
-This is caused by the amount of data that must be copied.
 
 These numbers from a test installation illustrate the approximate time it takes to export and import a small 1.8{nbsp}GB database:
 ----
