--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -159,7 +159,7 @@ This is to ensure that no data is written to the database during the migration.
 
 
 [[migration.troubleshooting.pkgdata]]
-=== Intergrate Externally Stored Package Data
+=== Integrate Externally Stored Package Data
 
 .Procedure: Migrating Data on an External Storage Device
 
