--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -1,15 +1,16 @@
 [[client-cfg-autoinstallation-methods]]
-= Introduction
+= Automate Client Installation
+// was: Introduction
 
 
-Kickstart and {ay} configuration files allow you to automate client system installations.
+Kickstart and {ay} configuration files allow you to automate client installations.
 This is especially useful if you need to install a large number of clients.
 
 For {sle} clients, use {ay}.
 When you have created an {ay} file, you can upload it and manage it with {productname}.
 
-For {rhel} clients, use Kickstart.
-Kickstart files are created, modified, and managed within the {productname} {webui}.
+For {rhel} clients, use {kickstart}.
+{kickstart} files are created, modified, and managed within the {productname} {webui}.
 
 The Cobbler installation server allows you to automate bare-metal installations.
 It uses DHCP to access a PXE boot server, and can be used in virtualized environments.
