--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -12,7 +12,7 @@ ifndef::backend-pdf[]
 *** xref:salt-client-proxy.adoc[Registering with the Web UI on a Proxy]
 *** xref:script-client-proxy.adoc[Registering with Bootstrap on a Proxy]
 // Automated Installation
-** xref:autoinstallation-methods.adoc[Automating Client Installation]
+** xref:autoinstallation-methods.adoc[Automate Client Installation]
 *** xref:autoyast.adoc[AutoYaST]
 *** xref:kickstart.adoc[Kickstart]
 *** xref:cobbler.adoc[Cobbler]
